# bookshop-service

./: README.md
backend/: Cargo.toml  Dockerfile.bff  Dockerfile.catalogue
backend/bff/: Cargo.toml
backend/bff/src/: main.rs
backend/catalogue/: Cargo.toml
backend/catalogue-service/: Cargo.toml  build.rs
backend/catalogue-service/proto/book/: catalogue.proto
backend/catalogue-service/src/: main.rs
backend/catalogue/src/: lib.rs  main.rs
backend/domain/src/models/: mod.rs
backend/order/: Cargo.toml
backend/order/src/: main.rs
backend/shipping/: Cargo.toml
backend/shipping/src/: main.rs
backend/utils/: Cargo.toml
backend/utils/src/: amqp.rs
bookshop-demo/bff/k8s/: bff.yaml
bookshop-demo/catalogue/k8s/: catalogue.yaml
bookshop-demo/frontend/k8s/: frontend.yaml
catalog-service/: Cargo.toml
docs/: async-graphql.md  cors.md
docs/async-graphql/book/: 01-introduction.md  02-quickstart.md  03-type_system.md  04-schema.md  05-utilities.md  06-extensions.md  07-integrations.md  08-advanced-topics.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
