[workspace]
members = ["bff", "catalogue", "domain", "order", "shipping", "utils"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
deadpool-lapin = { version = "0.12.1", features = ["rt_tokio_1"] }
futures-lite = "2.6.0"
num_cpus = "1"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.13"
tonic-reflection = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
