[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
catalogue-service = { path = "../catalogue-service" }
clap.workspace = true
domain = { path = "../domain" }
tokio.workspace = true
tonic.workspace = true
