[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
catalogue-service = { path = "../catalogue-service" }
clap.workspace = true
domain = { path = "../domain" }
hyper = "1.6.0"
tokio.workspace = true
tonic.workspace = true
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
