[package]
name = "catalogue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
domain = { path = "../domain" }
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"
